--- a/hobby.html
+++ b/hobby.html
@@ -20,7 +20,7 @@
 		<ol style="max-width: 100%;height: auto;">
 			<li>Painting</li>
 			<li>coding</li>
-			<li>listing songs</li>
+			<li>listenning songs</li>
 			<li>watching movie</li>
 		</ol>
 	</div>
