--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,10 @@
 	<title>Contact</title>
 	<link rel="shortcut icon" type="image/jpg" href="favicon.jpg">
 	<link rel="stylesheet" type="text/css" href="contactstyle.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;1,600;1,700&display=swap" rel="stylesheet">
 </head>
 <body bgcolor="#000d1a">
 	<div class="topnav">
